Bug 1923513 - Make ComputeClipForMaskItem return empty rect as it is rather than returning Nothing(). r=botond

There are two tests;

helper_fission_empty_clip.html is for this bug (bug 1923513), there's an
element covering over an OOP iframe but it has an empty clip-path, thus any
input event is not interefered by the element.

helper_fission_unresolved_clip.html is to make sure that this code change
doesn't regress unresolved clip cases, it's similar to above case but with an
unresolved clip-path, thus the OOP iframe isn't rendered, any input element
isn't reached to the iframe.

Differential Revision: https://phabricator.services.mozilla.com/D228116